cloud/k8s/backend/code-server/components.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: code-server
  name: code-server
spec:
  selector:
    matchLabels:
      app: code-server
  template:
    metadata:
      labels:
        app: code-server
        component: workload
    spec:
      volumes:
      - name: code-server-persistent-storage
        persistentVolumeClaim:
          claimName: code-server-pv-claim
      containers:
      - image: ghcr.io/jobscale/code-server
        name: code-server
        volumeMounts:
        - name: code-server-persistent-storage
          mountPath: /home/store
---
apiVersion: v1
kind: Service
metadata:
  name: code-server
  labels:
    app: code-server
    component: service
spec:
  selector:
    app: code-server
  type: ClusterIP
  ports:
  - name: tcp
    port: 80
    protocol: TCP
    targetPort: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: code-server
  labels:
    app: code-server
    component: route
spec:
  parentRefs:
  - name: web-gateway
    namespace: gateway-system
  hostnames:
  - "code-server.jsx.jp"
  - "code-server.x.jsx.jp"
  rules:
  - backendRefs:
    - name: code-server
      port: 80
    filters:
    - type: ExtensionRef
      extensionRef:
        group: gateway.nginx.org
        kind: AuthenticationFilter
        name: code-server
